Correcting and refactoring hte landing spich

--- a/index.html
+++ b/index.html
@@ -30,33 +30,22 @@
     <h1>Dr.travelProgramme</h1>
     <h1>Your Prescription for a Perfect Getaway</h1>
     <p>
-      Travel as a form of wellness. We are a travel recommendation
-      company that acts as a personal "travel doctor," diagnosing a client's
+      Travel as a form of wellness. We acts as a personal "travel doctor," diagnosing a client's
       specific needs and prescribing a curated, wellness-focused trip.<br />
     </p>
-    <h2>Core Offerings:</h2>
     <p>
-      - Diagnosis & Prescription: Clients complete a brief questionnaire to
-      identify their travel "ailment" (e.g., burnout, need for adventure, desire
-      for connection). We then generate a personalized travel prescription
+      Clients identify their travel "ailment" => We  generate a personalized travel prescription
       a detailed itinerary designed to rejuvenate their mind, body, and spirit.<br />
     </p>
     <p>
-      - Comprehensive Guides: Each prescription comes with a full "treatment
-      plan," including packing tips, cultural guides, and wellness activities to
+      Each prescription comes with a full "treatment plan," including packing tips, cultural guides, and wellness activities to
       ensure a seamless and enriching journey.<br />
     </p>
-    <p>
-      Expert Curation: Our recommendations are meticulously vetted by a team of
-      travel and wellness experts, prioritizing quality and genuine benefit over
-      a generic list of destinations.
-    </p>
+   
     <h2>Key Differentiators:</h2>
     <p>
       - Holistic & Personalized: We move beyond traditional travel planning by
-      integrating wellness principles into every step. We don't offer
-      one-size-fits-all trips; we create a bespoke experience tailored to the
-      individual. <br />
+      integrating wellness principles into every step. <br />
     </p>
     <p>
       - Focus on Transformation: Our goal is for clients to return not just
